--- a/app/package.json
+++ b/app/package.json
@@ -2,8 +2,14 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "cra-template": "1.2.0",
+    "express": "^4.18.2",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1"
